# CMakeHub

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  THIRD_PARTY_LICENSES.md  modules.json  pre_release_check.py  pyproject.toml  run_single_test.py  run_tests.py  setup.py  test_deps.dot  verify_modules.cmake
.githooks/: pre-commit
.github/workflows/: ci.yml  python_package.yml
cli/: __init__.py  main.py  package_data.py
cli/commands/: __init__.py  cache.py  check.py  info.py  init.py  list.py  search.py  update.py  update_index.py  use.py
cli/data/: THIRD_PARTY_LICENSES.md
cli/data/cmake/hub/: loader.cmake
cmake/hub/: loader.cmake
docs/: CONTRIBUTING.md  RELEASE_CHECKLIST.md
docs/modules/: README.md  add_gtest.md  afl_fuzzing.md  android_toolchain.md  bin2cpp.md  c_standards.md  catch2_cmake.md  check_function.md  clang_tidy_cg.md  clang_tidy_tools.md  cmake_checks.md  code_coverage_bilke.md  code_formatter.md  compile_options.md  compiler_info.md  compiler_warnings.md  component_install.md  conan.md  cotire.md  coverage.md  coverage_cg.md  cpm.md  cpp_standards.md  cppcheck_cg.md  cuda.md  dependency_graph.md  doctest.md  doxygen_helper.md  embed_resources.md  export_header.md  find_assimp.md  find_curl.md  find_egl.md  find_ffmpeg.md  find_glesv2.md  find_glew.md  find_gtk3.md  find_gtk4.md  find_hidapi.md  find_jpeg.md  (+22 more)
examples/: CMakeLists.txt
examples/advanced/: CMakeLists.txt  README.md  main.cpp
examples/all_modules/: CMakeLists.txt  README.md  dummy.cpp
examples/basic/: CMakeLists.txt  README.md  main.cpp
scripts/: add_module.py  check_master_branch.py  check_sync.py  fix_version.py  generate_docs.py  install_hooks.py  pre_release_check.py  release.py  sync_data.py  validate_modules.py
tests/: CMakeLists.txt  run_single_test.py  run_tests.py  test_new_features.cmake  verify_modules.cmake
tests/test_cache/: run.cmake
tests/test_conflicts/: run.cmake
tests/test_dependencies/: run.cmake
tests/test_loader_basic/: run.cmake
tests/test_version_check/: run.cmake
