[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmakehub"
version = "0.1.5"
description = "CMakeHub - Unified CMake Module Manager CLI"
readme = "README.md"
authors = [{name = "CMakeHub Team", email = "caomengxuan666@github.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/caomengxuan666/CMakeHub"
Repository = "https://github.com/caomengxuan666/CMakeHub"

[project.scripts]
cmakehub = "cli.main:main"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.setuptools.package-data]
cli = ["data/*", "data/cmake/*", "data/cmake/hub/*", "data/docs/*", "data/docs/modules/*"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | third_party
)/
'''

[tool.isort]
profile = "black"
line_length = 100